# manim-dsa

./: Makefile  README.md  pyproject.toml
docs/source/: changelog.rst
docs/source/guides/: animating_stacks.rst
manim_dsa/: __init__.py  constants.py
manim_dsa/m_collection/: m_array.py
manim_dsa/m_graph_generic/: m_graph_generic.py
manim_dsa/m_graph_square/: m_graph.py
tests/: test_mgraph.py  test_mgraph_square.py
