[project]
name = "manim-dsa"
version = "0.2.0"
description = "A Manim plugin to animate common data structures."
authors = [{ name = "Fabio Missagia", email = "fabio.missagia@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = ["manim>=0.19.0,<0.20"]

[project.urls]
Repository = "https://github.com/F4bbi/manim-dsa"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "isort>=5.13.2,<6",
    "ruff>=0.6.2,<0.7",
]

[tool.hatch.build.targets.sdist]
include = ["manim_dsa"]

[tool.hatch.build.targets.wheel]
include = ["manim_dsa"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
extend-exclude = [
  ".github",
  "media",
]
fix = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PT",
  "SIM",
  "UP",
]

ignore = [
  # copyright variable
  "A001",
  # mutable argument defaults (too many changes)
  "B006",
  # No function calls in defaults
  # ignored because np.array() and straight_path()
  "B008",
  # due to the import * used in manim
  "F403",
  "F405",
  # fixtures not returning anything should have leading underscore
  "PT004",
  # Exception too broad (this would require lots of changes + re.escape) for little benefit
  "PT011",
  # as recommended by https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "E111",
  "E114",
  "E117",
  "E501",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  # unused expression
  "B018",
  # unused variable
  "F841",
]
